--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,7 @@
-[tool.poetry]
+[project]
 name = "pytutor"
 version = "0.1.0"
-description = ""
-authors = ["PaszaVonPomiot"]
-
-[tool.poetry.dependencies]
-python = "^3.10"
-mypy = "^0.961"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 80
-target-version = ['py310']
-include = '\.pyi?$'
+description = "Python notes"
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = ["pydantic>=2.10.6"]
