--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-*.sh text eol=lf
-*.ipynb text eol=lf
+# CRLF for Windows scripts
+*.bat text eol=crlf
+*.ps1 text eol=crlf
+
+# LF for all other text files
+* text eol=lf
