--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Python notes"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["pydantic>=2.10.6"]
+dependencies = [
+    "ipykernel>=6.29.5",
+    "pydantic>=2.10.6",
+]
 
 
 [tool.ruff]
